💥 componentsの構造を破壊
