# app/routes/_pages.$session_id/modules/loader.ts
@@ -7,11 +7,11 @@ export const loader = async ({ request, params }: LoaderFunctionArgs) => {
     throw notfound();
   }
 
-  const { data: session } = await api.GET("/talksessions/{talkSessionId}", {
+  const { data: session } = await api.GET("/talksessions/{talkSessionID}", {
     headers: request.headers,
     params: {
       path: {
-        talkSessionId: params.session_id,
+        talkSessionID: params.session_id,
       },
     },
   });
@@ -21,12 +21,12 @@ export const loader = async ({ request, params }: LoaderFunctionArgs) => {
   });
 
   const { data: report } = await api.GET(
-    "/talksessions/{talkSessionId}/report",
+    "/talksessions/{talkSessionID}/report",
     {
       headers: request.headers,
       params: {
         path: {
-          talkSessionId: params.session_id,
+          talkSessionID: params.session_id,
         },
       },
     },
