# app/routes/_pages.swipe.$session_id/modules/loader.ts
@@ -8,11 +8,11 @@ export const loader = async ({ request, params }: LoaderFunctionArgs) => {
     return notfound();
   }
 
-  const { data: session } = await api.GET("/talksessions/{talkSessionId}", {
+  const { data: session } = await api.GET("/talksessions/{talkSessionID}", {
     headers: request.headers,
     params: {
       path: {
-        talkSessionId: params.session_id || "",
+        talkSessionID: params.session_id || "",
       },
     },
   });
