# tools/kotohiro.openapi.yaml
@@ -8,6 +8,7 @@ tags:
   - name: opinion
   - name: talk_session
   - name: timeline
+  - name: report
   - name: user
   - name: auth
   - name: test
@@ -94,55 +95,6 @@ paths:
       security:
         - apikey-header-SessionId: []
       x-ogen-operation-group: Vote
-  /opinions/{opinionID}/analysis:
-    get:
-      summary: 意見に投票したグループごとの割合
-      deprecated: false
-      description: ''
-      operationId: getOpinionAnalysis
-      tags:
-        - opinion
-      parameters:
-        - name: opinionID
-          in: path
-          description: ''
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/opinionGroupRatio'
-          headers: {}
-        '400':
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: object
-                properties: {}
-              example:
-                code: GENERAL-000
-                message: INTERNAL SERVER ERROR.
-          headers: {}
-        '500':
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: object
-                properties: {}
-              example:
-                code: GENERAL-000
-                message: INTERNAL SERVER ERROR.
-          headers: {}
-      security: []
-      x-ogen-operation-group: Opinion
   /opinions/{opinionID}/report:
     post:
       summary: 意見通報API
@@ -180,6 +132,55 @@ paths:
               schema:
                 type: object
                 properties: {}
+          headers: {}
+        '400':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                properties: {}
+              example:
+                code: GENERAL-000
+                message: INTERNAL SERVER ERROR.
+          headers: {}
+        '500':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                properties: {}
+              example:
+                code: GENERAL-000
+                message: INTERNAL SERVER ERROR.
+          headers: {}
+      security: []
+      x-ogen-operation-group: Opinion
+  /opinions/{opinionID}/analysis:
+    get:
+      summary: 意見に投票したグループごとの割合
+      deprecated: false
+      description: ''
+      operationId: getOpinionAnalysis
+      tags:
+        - opinion
+      parameters:
+        - name: opinionID
+          in: path
+          description: ''
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/opinionGroupRatio'
           headers: {}
         '400':
           description: ''
@@ -895,7 +896,7 @@ paths:
           headers: {}
       security: []
       x-ogen-operation-group: Opinion
-  /talksessions/{talkSessionId}:
+  /talksessions/{talkSessionID}:
     get:
       summary: トークセッションの詳細
       deprecated: false
@@ -904,7 +905,7 @@ paths:
       tags:
         - talk_session
       parameters:
-        - name: talkSessionId
+        - name: talkSessionID
           in: path
           description: ''
           required: true
@@ -946,7 +947,7 @@ paths:
       tags:
         - talk_session
       parameters:
-        - name: talkSessionId
+        - name: talkSessionID
           in: path
           description: ''
           required: true
@@ -962,8 +963,9 @@ paths:
                   example: ''
                   type: string
                 scheduledEndTime:
-                  example: ''
                   type: string
+                  format: date-time
+                  example: ''
                 latitude:
                   type: number
                   description: 緯度
@@ -988,6 +990,18 @@ paths:
                   description: 説明文
                   example: ''
                   nullable: true
+                thumbnailURL:
+                  description: サムネイルURL。文中から一番最初の画像URLをサムネとする。
+                  example: ''
+                  type: string
+                restrictions:
+                  type: array
+                  items:
+                    type: string
+                  uniqueItems: true
+                  description: 投稿制限のキー
+                  example:
+                    - demographics.city
               required:
                 - theme
                 - scheduledEndTime
@@ -1306,7 +1320,7 @@ paths:
       security:
         - apikey-header-SessionId: []
       x-ogen-operation-group: TalkSession
-  /talksessions/{talkSessionId}/analysis:
+  /talksessions/{talkSessionID}/analysis:
     get:
       summary: 分析結果一覧
       deprecated: false
@@ -1315,7 +1329,7 @@ paths:
       tags:
         - talk_session
       parameters:
-        - name: talkSessionId
+        - name: talkSessionID
           in: path
           description: ''
           required: true
@@ -1408,7 +1422,7 @@ paths:
           headers: {}
       security: []
       x-ogen-operation-group: TalkSession
-  /talksessions/{talkSessionId}/report:
+  /talksessions/{talkSessionID}/report:
     get:
       summary: セッションレポートを返す
       deprecated: false
@@ -1417,7 +1431,7 @@ paths:
       tags:
         - talk_session
       parameters:
-        - name: talkSessionId
+        - name: talkSessionID
           in: path
           description: ''
           required: true
@@ -1944,6 +1958,60 @@ paths:
       security:
         - apikey-header-SessionId: []
       x-ogen-operation-group: TalkSession
+  /talksessions/{talkSessionID}/reports:
+    get:
+      summary: 通報一覧
+      deprecated: false
+      description: ''
+      operationId: getReportsForTalkSession
+      tags:
+        - report
+      parameters:
+        - name: talkSessionID
+          in: path
+          description: ''
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  reports:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/reportDetail'
+                required:
+                  - reports
+          headers: {}
+        '400':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                properties: {}
+              example:
+                code: GENERAL-000
+                message: INTERNAL SERVER ERROR.
+          headers: {}
+        '500':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                properties: {}
+              example:
+                code: GENERAL-000
+                message: INTERNAL SERVER ERROR.
+          headers: {}
+      security: []
+      x-ogen-operation-group: Report
   /user:
     put:
       summary: ユーザー情報の変更
@@ -2545,7 +2613,7 @@ paths:
                   iconURL:
                     type: string
                     description: アイコンURL
-                  isVerify:
+                  isRegistered:
                     type: boolean
                     description: ユーザ登録済みか
                   isEmailVerified:
@@ -2557,7 +2625,7 @@ paths:
                   - iss
                   - sub
                   - jti
-                  - isVerify
+                  - isRegistered
                   - isEmailVerified
           headers: {}
         '400':
@@ -3345,7 +3413,7 @@ components:
         iconURL:
           type: string
           description: アイコンURL
-        isVerify:
+        isRegistered:
           type: boolean
           description: ユーザ登録済みか
         isEmailVerified:
@@ -3357,7 +3425,7 @@ components:
         - iss
         - sub
         - jti
-        - isVerify
+        - isRegistered
         - isEmailVerified
     offsetPagination:
       type: object
@@ -3493,14 +3561,14 @@ components:
     reportReason:
       type: object
       properties:
-        reason_id:
+        reasonID:
           type: integer
           description: '1'
         reason:
           type: string
           description: 不適切な内容
       required:
-        - reason_id
+        - reasonID
         - reason
     opinionGroupRatio:
       type: object
@@ -3511,16 +3579,44 @@ components:
           type: integer
         passCount:
           type: integer
-        groupId:
+        groupID:
           type: integer
         groupName:
           type: string
       required:
         - groupName
-        - groupId
+        - groupID
         - passCount
         - disagreeCount
         - agreeCount
+    reportDetail:
+      type: object
+      properties:
+        reportID:
+          type: string
+        opinion: *ref_0
+        user: *ref_1
+        reasons:
+          type: array
+          items:
+            type: object
+            properties:
+              reason:
+                type: string
+              content:
+                type: string
+                nullable: true
+            required:
+              - reason
+        reportCount:
+          type: integer
+          description: この意見が通報を受けた回数
+      required:
+        - reportID
+        - opinion
+        - user
+        - reasons
+        - reportCount
   securitySchemes:
     apikey-header-SessionId:
       type: apiKey
